g4/Expr.g4
grammar Expr;

/** 其实规则，语法分析的起点 */
prog:   stat+ ;

stat:   expr NEWLINE            #   printExpr
    |   ID '=' expr NEWLINE     #   assign
    |   NEWLINE                 #   blank
    ;

expr:   expr op=('*'|'/') expr     #   MulDiv
    |   expr op=('+'|'-') expr     #   AddSub
    |   INT                     #   int
    |   ID                      #   id
    |   '(' expr ')'            #   parents
    ;

MUL :   '*' ; // assigns token name to '*' used above in grammar
DIV :   '/' ;
ADD :   '+' ;
SUB :   '-' ;
ID  :   [a-zA-Z]+   ;
INT :   [0-9]+  ;
NEWLINE:    '\r'? '\n'  ;
WS  :   [ \t]+ -> skip ;
